fix(startpage): hide overflow

--- a/app/client/stylesheets/components/_pu-carousel.scss
+++ b/app/client/stylesheets/components/_pu-carousel.scss
@@ -1,6 +1,7 @@
 .pu-carousel {
     width: 100%;
     height: 225px;
+    overflow: hidden;
     position: relative;
     margin-bottom: 0;
 
